--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css?family=Asar|Titillium+Web" rel="stylesheet">
     <title>Wikipedia</title>
 </head>
-<head>
+<body>
     <div class="main">
         <div class="searchtools margintop pagination-centered" id="searchtools">
             <h1 id="title">Wikipedia Viewer</h1>
