--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <title>Wikipedia</title>
 </head>
 <body>
+    <!-- main container -->
     <div class="container-fluid margintop" id="searchtools">
         <div class="row" style="text-align: center;">
             <div class="col-8" style="margin: 0 auto;">
@@ -19,14 +20,16 @@
             </div>
         </div>
 
+        <!-- search input -->
         <div class="row text-center" style="">
             <div class="col-6" style="margin: 0 auto;">
                 <input type="search" id="toseach" class="form-control form-control-lg text-center" autocomplete="off" onkeypress="return evaluar(event)" placeholder="Search">
             </div>
-        </div>
+        </div> <br>
 
+        <!-- languaje select and clear button -->
         <div class="row" style="text-align: center;">
-            <div class="col-4" style="margin: 0 auto;">
+            <div class="col-2" style="margin: 0 auto;">
             <div class="input-group">
                     <select id="languajes" class="custom-select">
                         <option value="en">English</option>
@@ -39,28 +42,17 @@
                 </div>
             </div>
         </div>
+
+        <!-- here the result id shown -->
         <div class="row">
             <div class="row-10" id="jsontext">
             </div>
         </div>
+
+        <!-- little footer -->
         <footer class="searchtools">
             coded by <a href="https://codepen.io/wilsoft-gt/" target="_blank">wilsoft-gt</a>
         </footer>
-
-
-<!--         <div class="searchtools margintop pagination-centered" id="searchtools">
-            <h1 id="title">Wikipedia Viewer</h1>
-            <a href="https://en.wikipedia.org/wiki/Special:Random" target="_blank">Click here for a random search</a> <br>
-                <input class="form-control" id="toseach" type="search" autocomplete="off" onkeypress="return evaluar(event)" placeholder="Search"><br>
-                <select id="languajes" class="">
-                    <option value="en">English</option>
-                    <option value="es">Spanish</option>
-                    <option value="fr">French</option>
-                </select>
-                <button id="clear" class="btn" onclick="clearSearch()">Clear</button>
-        </div>
-        <div id="jsontext">
-        </div> -->
 
     </div>
     
