--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
 
         <!-- search input -->
         <div class="row text-center" style="">
-            <div class="col-6" style="margin: 0 auto;">
+            <div class="col-md-6 col-sm-4" style="margin: 0 auto;">
                 <input type="search" id="toseach" class="form-control form-control-lg text-center" autocomplete="off" onkeypress="return evaluar(event)" placeholder="Search">
             </div>
         </div> <br>
 
         <!-- languaje select and clear button -->
         <div class="row" style="text-align: center;">
-            <div class="col-2" style="margin: 0 auto;">
+            <div class="col-md-2 col-sm-4" style="margin: 0 auto;">
             <div class="input-group">
                     <select id="languajes" class="custom-select">
                         <option value="en">English</option>
