--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- main container -->
     <div class="container-fluid margintop" id="searchtools">
         <div class="row" style="text-align: center;">
-            <div class="col-8" style="margin: 0 auto;">
+            <div class="col-sm-4 col-md-8" style="margin: 0 auto;">
                 <h1 id="title">Wikipedia Viewer</h1> <br>
                 <a href="https://en.wikipedia.org/wiki/Special:Random" target="_blank">Click here for a random search</a> <br>
             </div>
@@ -41,18 +41,18 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> <br>
 
         <!-- here the result id shown -->
         <div class="row">
-            <div class="row-10" id="jsontext">
+            <div class="col-md-10 col-sm-12" style="margin: auto;" id="jsontext">
             </div>
         </div>
 
         <!-- little footer -->
         <footer class="searchtools">
             coded by <a href="https://codepen.io/wilsoft-gt/" target="_blank">wilsoft-gt</a>
-        </footer>
+        </footer> <br>
 
     </div>
     
