--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
         <!-- languaje select and clear button -->
         <div class="row" style="text-align: center;">
-            <div class="col-md-6 col-sm-4" style="margin: 0 auto;">
+            <div class="col-md-6 col-sm-4 col-lg-3" style="margin: 0 auto;">
             <div class="input-group">
                     <select id="languajes" class="custom-select">
                         <option value="en">English</option>
