--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Asar|Titillium+Web" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
     <title>Wikipedia</title>
 </head>
 <body>
@@ -51,7 +52,7 @@
 
         <!-- little footer -->
         <footer class="searchtools">
-            coded by <a href="https://codepen.io/wilsoft-gt/" target="_blank">wilsoft-gt</a>
+            Coded by <a href="https://www.wilsonromero.design/" target="_blank">wilsoft-gt</a> | View code <a href="https://codepen.io/wilsoft-gt/pen/YaeZJV" target="_blank"><i class="fa fa-codepen"></i></a> <a href="https://github.com/wilsoft-gt/wikipediaviewer"><i class="fa fa-github"></i></a>
         </footer> <br>
 
     </div>
