--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
         <!-- little footer -->
         <footer class="searchtools">
-            Coded by <a href="https://www.wilsonromero.design/" target="_blank">wilsoft-gt</a> | View code <a href="https://codepen.io/wilsoft-gt/pen/YaeZJV" target="_blank"><i class="fa fa-codepen"></i></a> <a href="https://github.com/wilsoft-gt/wikipediaviewer"><i class="fa fa-github"></i></a>
+            Coded by <a href="https://www.wilsonromero.design/" target="_blank">wilsoft-gt</a> | View code <a href="https://codepen.io/wilsoft-gt/pen/YaeZJV" target="_blank"><i class="fa fa-codepen"></i></a> <a href="https://github.com/wilsoft-gt/wikipediaviewer" target="_blank"><i class="fa fa-github"></i></a>
         </footer> <br>
 
     </div>
